# GoogleKeyworder

./: .gitignore  README.md  example.py  pyproject.toml
google_keyworder/: __init__.py  main.py
tests/: test_main.py
